--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ kotlin.native.enableDependencyPropagation=false
 
 # Lib
 GROUP=com.algolia
-VERSION_NAME=1.13.0-SNAPSHOT
+VERSION_NAME=1.13.0-SNAPSHOT-zest
 # POM
 POM_DESCRIPTION="Algolia is a powerful search-as-a-service solution, made easy to use with API clients, UI libraries, \
   and pre-built integrations. Algolia API Client for Kotlin lets you easily use the Algolia Search \
